# SmartBoot-AMLMod

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  FullScreen.cpp  FullScreen.hpp  SkipSocialClub.cpp  SkipSocialClub.hpp  StartGame.cpp  StartGame.hpp  main.cpp  main.hpp
src/Game/: FastPlay.cpp  FastPlay.hpp
src/SCAnd/: FullScreen.cpp  FullScreen.hpp  SkipSocialClub.cpp  SkipSocialClub.hpp
